--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -7,8 +7,8 @@ body,
 }
 
 html.dark {
-  background: #121212;
-  color-scheme: dark;
+  background: #ffffff;
+  color-scheme: light;
 }
 
 #nprogress {
